[package]
name = "meta-enum-derive"
version = "0.2.0"
edition = "2024"
description = "Proc Macro for meta-enum crate"
homepage = "https://github.com/RezaBani/meta-enum-derive"
repository = "https://github.com/RezaBani/meta-enum-derive"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote = { version = "1" }
syn = { version = "2" }
