[package]
name = "meta-enum"
version = "0.2.1"
edition = "2024"
description = "Meta Information on C-Style Enum Inspired by QMetaEnum"
homepage = "https://github.com/RezaBani/meta-enum"
repository = "https://github.com/RezaBani/meta-enum"
license = "MIT OR Apache-2.0"

[package.metadata.playground]
features = ["derive"]

[dependencies]
meta-enum-derive = { path = "../meta-enum-derive", version = "=0.2.1", optional = true }

[dev-dependencies]
meta-enum-derive = { path = "../meta-enum-derive", version = "=0.2.1" }

[features]
default = []
derive = ["meta-enum-derive"]
